kubernetes/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: nginx.ingress.kubernetes.io/controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-best-doc-web-ingress
  labels:
    name:  angular-best-doc-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: angular-best-doc-web.lab-cloud-development.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: angular-best-doc-web-service
            port:
              number: 80
